--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@ display: none;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-754bbd8 elementor-widget elementor-widget-text-editor" data-id="754bbd8" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div class="photo-2 photo-inner photo"><figure class="wp-block-image"><a href="#form-action-tag"><img fetchpriority="high" decoding="async" class="alignnone wp-image-2410 size-full" src="images/IMG_2770.jpg" alt="" width="1015" height="657" srcset="images/IMG_2770.jpg 1015w, images/ 300w, images/IMG_2770 768w" sizes="(max-width: 1015px) 100vw, 1015px"></a></figure><figure class="wp-block-image"><p><a href="#form-action-tag"><strong>AI TRADING COPMANY</strong></a><p class="upper__text">es una nueva plataforma para <a href="#form-action-tag"><strong>ganar dinero</strong></a> basada en la inteligencia artificial, en la que han trabajado los mejores programadores de todo el mundo</p>
+							<div class="photo-2 photo-inner photo">
+								<figure class="wp-block-image">
+									<a href="#form-action-tag">
+										<img fetchpriority="high" decoding="async" class="alignnone wp-image-2410 size-full" src="images/IMG_2770.JPG" alt="" width="1015" height="657" srcset="images/IMG_2770.JPG 1015w, images/ 300w, images/IMG_2770.JPG 768w" sizes="(max-width: 1015px) 100vw, 1015px"></a></figure><figure class="wp-block-image"><p><a href="#form-action-tag"><strong>AI TRADING COPMANY</strong></a><p class="upper__text">es una nueva plataforma para <a href="#form-action-tag"><strong>ganar dinero</strong></a> basada en la inteligencia artificial, en la que han trabajado los mejores programadores de todo el mundo</p>
 
 								<p class="title__text"><strong>TODO ELLO PARA QUE INCLUSO LOS MÁS POBRES PUDIERAN SALIR DE LA POBREZA</strong></p><figure class="slate-resizable-image-embed slate-image-embed__resize-left"></figure><p>LA INTELIGENCIA ARTIFICIAL DE LA PLATAFORMA HA SIDO ENTRENADA SOBRE LA BASE DE TODAS LAS TRANSACCIONES DEL MERCADO DE DIVISAS, LO QUE LE PERMITE REALIZAR LAS OPERACIONES MÁS SEGURAS Y RENTABLES POSIBLES. </div>						</div>
 				</div>
@@ -219,7 +222,7 @@ display: none;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-1c9e3fb elementor-widget elementor-widget-text-editor" data-id="1c9e3fb" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><a href="#form-action-tag"><img decoding="async" class="alignnone wp-image-2392 size-full" src="images/IMG_2771.JPG" alt="" width="1884" height="919" srcset="images/IMG_2771.JPG 1884w, images/quantum-11-1-300x146.jpg 300w, images/IMG_2771.JPG 1024w, images/IMG_2771.JPG 768w, images/IMG_2771.JPG 1536w" sizes="(max-width: 1884px) 100vw, 1884px"></a></p>						</div>
+							<p><a href="#form-action-tag"><img decoding="async" class="alignnone wp-image-2392 size-full" src="images/IMG_2771.JPG" alt="" width="1984" height="919" srcset="images/IMG_2771.JPG 1884w, images/quantum-11-1-300x146.jpg 300w, images/IMG_2771.JPG 1024w, images/IMG_2771.JPG 768w, images/IMG_2771.JPG 1536w" sizes="(max-width: 1884px) 100vw, 1884px"></a></p>						</div>
 				</div>
 					</div>
 		</div>
