--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ display: none;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-1c9e3fb elementor-widget elementor-widget-text-editor" data-id="1c9e3fb" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><a href="#form-action-tag"><img decoding="async" class="alignnone wp-image-2392 size-full" src="images/IMG_2771.JPG" alt="" width="1984" height="919" srcset="images/IMG_2771.JPG 1884w, images/quantum-11-1-300x146.jpg 300w, images/IMG_2771.JPG 1024w, images/IMG_2771.JPG 768w, images/IMG_2771.JPG 1536w" sizes="(max-width: 1884px) 100vw, 1884px"></a></p>						</div>
+							<p><a href="#form-action-tag"><img decoding="async"style="width: 1110px;" class="alignnone wp-image-2392 size-full" src="images/IMG_2771.JPG" alt="" width="1984" height="919" srcset="images/IMG_2771.JPG 1884w, images/quantum-11-1-300x146.jpg 300w, images/IMG_2771.JPG 1024w, images/IMG_2771.JPG 768w, images/IMG_2771.JPG 1536w" sizes="(max-width: 1884px) 100vw, 1884px"></a></p>						</div>
 				</div>
 					</div>
 		</div>
